# dvc-test

./: .dvcignore  .gitignore  Dockerfile  README.md  data.dvc  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.dvc/: config
bird-rec-model/: .gitignore
data/: .gitignore  test.dvc  test.zip.dvc  train.dvc  train.zip.dvc
live/eval/: metrics.json
live/eval/plots/metrics/: test_accuracy.tsv  test_loss.tsv  test_precision.tsv  test_recall.tsv
live/eval/plots/sklearn/: confusion_matrix.json
live/train/: metrics.json
live/train/plots/metrics/train/: accuracy.tsv  loss.tsv  precision.tsv  recall.tsv
src/: evaluate.py  train.py
