[tool.poetry]
name = "dvc-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^3.44.0"
dvc-gdrive = "^3.0.1"
keras = "^3.0.4"
dvclive = "^3.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
